<resources>
    <string name="app_name">Ubicarte</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Contraseña">Contraseña</string>
    <string name="sign_in">Sign in</string>
    <string name="log_in">Log in</string>
    <string name="todo">TODO</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="telefono">Telefono</string>
    <string name="datos_del_automovil">Datos Del Automovil</string>
    <string name="datos_del_usuario">Datos Del Usuario</string>
    <string name="registrar">Registrar</string>
    <string name="modelo">Modelo</string>
    <string name="placas">Placas</string>
    <string name="title_activity_ubicacion">Map</string>
    <string name="title_activity_mapa_principal">MapaPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="olvidaste_tu_contrase_a">Olvidaste tu contraseña?</string>
    <string name="nueva_contrase_a">Nueva Contraseña</string>
    <string name="actualizar_datos">Actualizar datos</string>
    <string name="confirma_nueva_contrase_a">Confirma Nueva Contraseña</string>
    <string name="actualizar">Actualizar</string>
    <string name="automovil">Automovil</string>
    <string name="test">Test</string>
    <string name="enviar_correo_para_reiniciar">Enviar Correo para reiniciar</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="ingresa_correo">Ingresa correo</string>
    <string name="recuperar">Recuperar</string>
    <string name="nuevo_automovil">Nuevo Automovil</string>
    <string name="enviar_alerta">Enviar Alerta</string>
    <string name="ver_alerta_por_automovil">Ver Alerta por automovil</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="noCoinciden">Las contraseñas no coinciden</string>
    <string name="userReg">Usuario registrado</string>
    <string name="plsStart">Usuario registrado, por favor inicie sesion</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="holi_3">Holi :3</string>
    <string name="ubi8256">Ubi8256</string>
    <string name="asdf1234damian_gmail_com">asdf1234damian@gmail.com</string>
    <string name="title_activity_maps">Map</string>
    <string name="vehicles">Vehicles</string>
</resources>
