<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/datos_del_usuario"
                android:textAlignment="center"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/inNombre"
                android:layout_width="fill_parent"
                android:text="Damian"
                android:layout_height="wrap_content"
                android:inputType="textAutoCorrect" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apellidos"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/inApellidos"
                android:layout_width="fill_parent"
                android:text="Meza"
                android:layout_height="wrap_content"
                android:inputType="textAutoCorrect"
                android:selectAllOnFocus="false"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefono"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/inTelefono"
                android:text="5516391630"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correo_electronico"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/inEmail"
                android:text="@string/asdf1234damian_gmail_com"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoCorrect"
                android:selectAllOnFocus="false"
                android:singleLine="true"
                tools:ignore="TextFields" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/datos_del_automovil"
                android:textAlignment="center"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modelo"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/inModelo"
                android:text="Mini"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoCorrect" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placas"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/inPlacas"
                android:layout_width="fill_parent"
                android:text="234-MGE"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Contraseña"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/inPass"
                android:text="Ubi8256"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmar_contrase_a"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/inPassConf"
                android:text="Ubi8256"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />


            <Button
                android:text="@string/registrar"
                android:id="@+id/registrationBttn"
                android:onClick="registrationUser_click"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>